# test-infra

./: .gitignore  .gitmodules  CLAUDE.md  README.md
data-tools/arn/: Cargo.toml  README.md  summary.md
data-tools/arn/src/: main.rs  script.rs
data-tools/arn/src/arn/: generator.rs  mod.rs  models.rs
data-tools/gdelt/gdelt-cli/: Cargo.toml  readme.md
data-tools/gdelt/gdelt-cli/src/: gdelt.rs  lib.rs  main.rs  postgres.rs  script_generator.rs  types.rs
data-tools/gdelt/gdelt-cli/tests/: .gitignore  script_generation_tests.rs
data-tools/redis/redis-stream-cli/: Cargo.toml  README.md
data-tools/redis/redis-stream-cli/src/: lib.rs  main.rs  output.rs  reader.rs  types.rs
data-tools/wikidata/wikidata-cli/: .gitignore  Cargo.toml  readme.md
data-tools/wikidata/wikidata-cli/src/: lib.rs  main.rs  postgres.rs  script.rs  types.rs  wikidata.rs
data-tools/wikidata/wikidata-cli/tests/: script_tests.rs
e2e-test-framework/: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md
e2e-test-framework/.github/workflows/: draft-release.yml
e2e-test-framework/data-collector/: Cargo.toml
e2e-test-framework/data-collector/src/: config.rs  lib.rs
e2e-test-framework/data-collector/src/query/: mod.rs
e2e-test-framework/data-collector/src/source/: bootstrap_data_recorder.rs  mod.rs  source_change_recorder.rs
e2e-test-framework/devops/: e2e-test-source-provider.yaml  test-service-deployment.yaml
e2e-test-framework/devops/drasi/: e2e_test_source_provider.yaml  test_service_deployment.yaml
e2e-test-framework/devops/observability/: grafana.yaml  install.sh  namespace.yaml  otel-collector.yaml  prometheus.yaml  tempo.yaml  uninstall.sh
e2e-test-framework/examples/: .gitignore  comprehensive-example-config.yaml  readme.md
e2e-test-framework/examples/building-comfort/local/: web_api_query.http  web_api_source.http
e2e-test-framework/examples/building_comfort/: run_test_kind_drasi.sh  run_test_local.sh
e2e-test-framework/examples/building_comfort/drasi/: get_test_run_results.sh  kind_run_test.sh  kind_run_test_with_observability.sh  query.yaml  query_container_memory.yaml  query_container_redis.yaml  query_container_rocks.yaml  run_test.sh  run_test_with_default.sh  run_test_with_memory.sh  run_test_with_observability.sh  run_test_with_redis.sh  run_test_with_rocks.sh  source.yaml  test_service_deployment.yaml  test_service_deployment_kind.yaml  web_api_query.http
e2e-test-framework/examples/building_comfort/drasi_embedded/: config.json  config.yaml  run_debug.sh  run_release.sh  run_release_test.sh  run_release_yaml.sh  web_api.http  web_api_drasi_server.http
e2e-test-framework/examples/building_comfort/drasi_lib/: config.json  run_test.sh  run_test_debug.sh
e2e-test-framework/examples/building_comfort/drasi_platform/: get_test_run_results.sh  run_test_with_default.sh  run_test_with_rocks.sh  source.yaml  test_service_deployment.yaml  test_service_deployment_dev.yaml  test_service_deployment_kind.yaml  (+2 more)
e2e-test-framework/examples/grpc_example/: README.md  config.json
e2e-test-framework/examples/population/: README.md  end_test_run.sh  run_kind_drasi  run_kind_drasi_with_grafana  run_kind_drasi_with_zipkin  run_local  run_test_kind_aks.sh  run_test_kind_drasi.sh  run_test_kind_drasi_with_observability.sh
e2e-test-framework/examples/reaction_logging/: README.md  README_PERFORMANCE_METRICS.md  config.json
e2e-test-framework/examples/stock_market/: README.md
e2e-test-framework/infrastructure/comms-abstractions/: Cargo.toml
e2e-test-framework/infrastructure/comms-dapr/: Cargo.toml
e2e-test-framework/proxy/: Cargo.toml  Dockerfile  Dockerfile.azure-linux  Dockerfile.debug  Dockerfile.default  Makefile
e2e-test-framework/proxy/src/: main.rs  web_api.rs
e2e-test-framework/reactivator/: Cargo.toml  Dockerfile  Dockerfile.azure-linux  Dockerfile.debug  Makefile
e2e-test-framework/reactivator/src/: main.rs  web_api.rs
e2e-test-framework/test-data-collector/: .gitignore  Cargo.toml
e2e-test-framework/test-data-collector/src/: config.rs  lib.rs
e2e-test-framework/test-data-store/: Cargo.toml
e2e-test-framework/test-data-store/src/: azure_storage_blob_test_repo_client.rs  config.rs  lib.rs
e2e-test-framework/test-data-store/tests/: lib_test.rs
e2e-test-framework/test-dataset-collector/: .gitignore  Cargo.toml
e2e-test-framework/test-dataset-collector/src/: config.rs  lib.rs
e2e-test-framework/test-run-host/: Cargo.toml  build.rs
e2e-test-framework/test-run-host/src/: drasi_server_api_impl.rs  grpc_converters.rs  lib.rs
e2e-test-framework/test-run-source/: Cargo.toml
e2e-test-framework/test-run-source/src/: lib.rs
e2e-test-framework/test-runner/: .gitignore  Cargo.toml  Dockerfile  README.MD
e2e-test-framework/test-runner-service/: Cargo.toml  Dockerfile
e2e-test-framework/test-runner-service/src/: main.rs  proxy.rs  source.rs  test_repo.rs  web_api.rs
e2e-test-framework/test-runner/src/: change_script_player.rs  change_script_player.xxx  config.rs  lib.rs  main.rs  test_run.rs
e2e-test-framework/test-runner/tests/: lib_test.rs
e2e-test-framework/test-script-service/: Cargo.toml  README.MD
e2e-test-framework/test-script-service/src/: config.rs  main.rs  test_repo.rs
e2e-test-framework/test-service/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.azure-linux  Dockerfile.debug  Dockerfile.default  Makefile  README.md
e2e-test-framework/test-service/devops/: deployment.yaml
e2e-test-framework/test-service/docs/: openapi.md
e2e-test-framework/test-service/src/: dataset.rs  main.rs  openapi.rs  source.rs  test_repo.rs  web_api.rs
e2e-test-framework/test-service/tests/: api_integration_test.rs  config_format_test.rs  signal_cleanup_test.rs  swagger_test.rs
e2e-test-framework/test-source/: e2e-test-source-facilities.yaml  e2e-test-source-provider.yaml
e2e-test-framework/test-source-provider/: e2e-test-service-provider.yaml  e2e-test-source-provider.yaml
e2e-test-framework/test-source-service/: .gitignore  Cargo.toml  README.MD
e2e-test-framework/test-source-service/src/: main.rs
(+534 files in other folders)
