[workspace]

members = [
  "data-collector",
  "proxy",
  "reactivator",
  "test-data-store",
  "test-run-host",
  "test-service",
  
  # Internal
  "infrastructure/comms-abstractions",
  "infrastructure/comms-dapr",
]

resolver = "2"

[workspace.package]
version = "0.2.0"

[profile.release]
lto = true