[package]
name = "reactivator"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.19"
clap = { version = "4.3.21", features = ["derive", "env"] }
futures = "0.3.3"
log = "0.4"
env_logger = "0.7.1"
reqwest = { version = "0.12.7", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.37.0", features = ["full"] }
anyhow = "1.0.86"
thiserror = "1.0.63"