[package]
name = "test-data-collector"
version = "0.1.0"
edition = "2021"

[dependencies]
test-data-store = { path = "../test-data-store" }

azure_core = "0.20.0"
azure_storage = "0.20.0"
azure_storage_blobs = "0.20.0"
chrono = { version = "0.4.38", features = ["serde"] }
futures = "0.3.3"
log = "0.4"
env_logger = "0.7.1"
redis = { version = "0.27.5", features = ["tokio-comp"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tempfile = "3.2"
tokio = { version = "1.37.0", features = ["full"] }
anyhow = "1.0.86"
thiserror = "1.0.63"
async-trait = "0.1.81"
walkdir = "2.5.0"
uuid = { version = "1.2", features = ["v4"] }
