[package]
name = "test-run-host"
version = "0.1.0"
edition = "2021"

[dependencies]
drasi-comms-abstractions = { path = "../infrastructure/comms-abstractions" }
drasi-comms-dapr = { path = "../infrastructure/comms-dapr" }
test-data-store = { path = "../test-data-store" }

anyhow = "1.0.86"
async-trait = "0.1.81"
azure_core = "0.20.0"
azure_storage = "0.20.0"
azure_storage_blobs = "0.20.0"
chrono = { version = "0.4.38", features = ["serde"] }
derive_more = { version = "1.0.0", features = ["debug"] }
env_logger = "0.7.1"
futures = "0.3.3"
log = "0.4"
opentelemetry = {version = "0.20", features = ["rt-tokio"]}
opentelemetry-otlp = {version = "0.13", features = ["trace", "metrics"]}
opentelemetry-semantic-conventions = "0.12"
opentelemetry_sdk = {version = "0.20", features = ["rt-tokio"]}
redis = { version = "0.27.5", features = ["tokio-comp"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tempfile = "3.2"
thiserror = "1.0.63"
time = "0.3.37"
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = "0.1.17"
tracing = "0.1.37"
tracing-opentelemetry = "0.21"
tracing-subscriber = {version = "0.3.17", features = ["env-filter"]}
walkdir = "2.5.0"