[package]
name = "test-source-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.19"
azure_core = "0.20.0"
azure_storage = "0.20.0"
azure_storage_blobs = "0.20.0"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.3.21", features = ["derive", "env"] }
futures = "0.3.3"
log = "0.4"
env_logger = "0.7.1"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.37.0", features = ["full"] }