[package]
name = "gdelt"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38" }
clap = { version = "4.5.18", features = ["derive", "env"] }
env_logger = "0.7.1"
futures = "0.3.3"
log = "0.4"
reqwest = "0.12.7"
tokio = { version = "1.37.0", features = ["full"] }