[package]
name = "redis-stream-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "redis-stream-cli"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.18", features = ["derive", "env"] }
env_logger = "0.7.1"
log = "0.4"
tokio = { version = "1.37.0", features = ["full"] }
redis = { version = "0.27.5", features = ["tokio-comp"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
chrono = { version = "0.4.38", features = ["serde"] }

[dev-dependencies]
tempfile = "3.10"
